# cross-lang-communication

./: .gitignore  README.md
c-poc/: CMakeLists.txt  main.c
compile-time-json/rust/compile_time_json/: Cargo.toml
compile-time-json/rust/compile_time_json/src/: lib.rs
compile-time-json/rust/experiment/: Cargo.toml  simple.json
compile-time-json/rust/experiment/src/: main.rs
compile-time-json/zig/: build.zig
compile-time-json/zig/src/: comptime_allocator.zig  main.zig  simple.json
cpp-poc/: CMakeLists.txt  main.cpp
rust-poc/: Cargo.toml  build.rs
rust-poc/src/: lib.rs  main.rs
simple-lib/: CMakeLists.txt
simple-lib/include/: MyClass.hpp  library.h
simple-lib/src/: MyClass.cpp  library.c
zig-poc/: build.zig
zig-poc/src/: main.zig
